--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.23",
+        "srmklive/paypal": "^3.0",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
