--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -3,6 +3,8 @@ server {
     server_name localhost;
     root /var/www/public;
 
+    client_max_body_size 25M;
+
     index index.php index.html;
 
     location / {
