--- a/docker/php/local.ini
+++ b/docker/php/local.ini
@@ -9,3 +9,8 @@ opcache.revalidate_freq=0
 ; Melhor performance com Laravel
 realpath_cache_size=4096K
 realpath_cache_ttl=600
+
+upload_max_filesize = 20M
+post_max_size = 25M
+
+
